--- a/ru/index.html
+++ b/ru/index.html
@@ -102,7 +102,7 @@
                         <h2 class="main-item__title">
                             <a href="https://upgrade.kolesa.group/" target="_blank">Kolesa Upgrade</a>
                         </h2>
-                        <p class="main-item__date">November, 2022</p>
+                        <p class="main-item__date">Ноябрь, 2022</p>
                         <div class="main-item__description">
                             <p>Онлайн курс по основам Backend разработки на PHP и Go</p>
                         </div>
@@ -113,7 +113,7 @@
                         <h2 class="main-item__title">
                             <a href="https://www.instagram.com/sapsan_code.kz/" target="_blank">Sapsan Code</a>
                         </h2>
-                        <p class="main-item__date">May, 2024</p>
+                        <p class="main-item__date">Май, 2024</p>
                         <div class="main-item__description">
                             <p>Онлайн курс по основам Backend разработки на Spring (Java)</p>
                         </div>
