--- a/ru/index.html
+++ b/ru/index.html
@@ -26,20 +26,26 @@
                     <span class="content__description"></span>
                     <nav class="content__social">
                         <a href="https://www.linkedin.com/in/bitebayev" target="_blank" class="content__social-item">
-                            <img src="../assets/img/icons/in.svg" alt="LinkedIn">
+                            <img src="../assets/img/icons/linkedin.png" alt="LinkedIn">
                             <span>LinkedIn</span>
                         </a>
                         <a href="https://t.me/hackeevo" target="_blank" class="content__social-item">
-                            <img src="../assets/img/icons/telegram.svg" alt="Telegram">
+                            <img src="../assets/img/icons/telegram.png" alt="Telegram">
                             <span>@hAckeeVo</span>
+                        </a>
+                        <a href="https://github.com/OMaRgaLy" target="_blank" class="content__social-item">
+                            <img src="../assets/img/icons/github-logo.png" alt="Telegram">
+                            <span>GitHub</span>
                         </a>
                     </nav>
                 </div>
             </div>
+            <a href=""><img src="https://readme-typing-svg.herokuapp.com?font=Fira+Code&weight=500&duration=3500&pause=1&multiline=true&width=500&height=80&separator=%3C&lines=Computer+Science+Enthusiast+;)%3CPHP+and+Go+Backend+Developer!" alt="Typing SVG" /></a>
             <div class="content__main">
                 <div class="content__main-item">
                     <div class="main-item__description">
-                        <p> Привет! Меня зовут Омар, я будущий Software Engineer. Изучаю Backend разработку, языки программирования, базы данных, инженерную культуру и информатику в целом. Буду рад если добавите в контакты в <a href="https://www.linkedin.com/in/bitebayev" target="_blank">LinkedIn</a> и/или напишите сообщение в <a href="https://t.me/hackeevo" target="_blank">
+                        <p> Привет! Меня зовут Омар, я будущий Senior Software Engineer. Я Backend-разработчик, который умеет брать задачу и доводить её до результата. Люблю разбираться в новых технологиях. В работе важны развитие, команда, качественные решения и польза обществу.
+                            Обсуждать код, предлагать идеи, помогать другим и учиться у более опытных разработчиков считаю важной частью работы. Буду рад если добавите в контакты в <a href="https://www.linkedin.com/in/bitebayev" target="_blank">LinkedIn</a> и/или напишите сообщение в <a href="https://t.me/hackeevo" target="_blank">
                             Telegram</a></p>
 
                     </div>
@@ -48,38 +54,38 @@
                 <h1 class="content__about-header">Icons</h1>
                 <h1 class="content__about-header">Blocks</h1>
                 <h2 class="content__subheader">Text</h2>
-                -->
-                <div class="content__main-item">
-                    <div class="main-item__description">
-                        <p>В будущем планирую разместить здесь блок с моими пет-проектами для порфтолио...</p>
-                    </div>
-                </div>
-                <!--
+
                 <div class="content__main-item">
                     <div class="main-item__description">
                         <p></p>
                     </div>
                 </div>
-                <h2 class="content__subheader">Projects</h2>
+
+                <div class="content__main-item">
+                    <div class="main-item__description">
+                        <p></p>
+                    </div>
+                </div>-->
+                <h2 class="content__subheader">ПРОЕКТЫ</h2>
                 <div class="content__main-item project">
-                    <a data-fslightbox href="assets/img/project.png">
+                    <a data-fslightbox href="../assets/img/project.png">
                         <img src="../assets/img/project.png" alt="project1">
                     </a>
                     <div>
                         <div class="main-item__title">
-                            <a href="/example/project.html"><span>Project 1</span></a>
+                            <a href="https://github.com/OMaRgaLy/hackeevo-project"><span>Task Manager API</span></a>
                         </div>
                         <div class="main-item__description">
-                            <p></p>
+                            <p>Task Manager — Backend-сервис на PHP и MySQL для управления задачами и пользователями. Работает через API, запущен в Docker-контейнерах (nginx, php-fpm, mysql). Реализована обработка транзакций (удаление пользователя и его задач с commit/rollback), тестирование API в Postman и деплой через Git.</p>
                         </div>
                         <div class="main-item__subdescription">
-                            <p><span>Stack:</span> Vue.js, Laravel, Socket.io</p>
-                            <p class="main-item__links"><a href=""><span>Source Code</span></a><span>|</span><a href=""><span>Preview</span></a> </p>
+                            <p><span>Стек:</span> Docker: nginx, PHP-FPM, MySQL</p>
+                            <p class="main-item__links"><a href="https://github.com/OMaRgaLy/hackeevo-project"><span>Код (репозиторий)</span></a><span>|</span><a href="http://195.80.238.99/"><span>Ссылка на сервер</span></a> </p>
                         </div>
                     </div>
-                </div>
+                </div><!--
                 <div class="content__main-item project">
-                    <a data-fslightbox href="assets/img/project2.png">
+                    <a data-fslightbox href="../assets/img/project2.png">
                         <img src="../assets/img/project2.png" alt="project2">
                     </a>
                     <div>
@@ -102,9 +108,9 @@
                         <h2 class="main-item__title">
                             <a href="https://upgrade.kolesa.group/" target="_blank">Kolesa Upgrade</a>
                         </h2>
-                        <p class="main-item__date">Ноябрь, 2022</p>
+                        <p class="main-item__date">Сентябрь - Ноябрь, 2022</p>
                         <div class="main-item__description">
-                            <p>Онлайн курс по основам Backend разработки на PHP и Go</p>
+                            <p>Курс по основам Backend-разработки: от базового синтаксиса PHP 8+ и Go до построения полноценных веб-сервисов. Изучаем Slim, MySQL, Docker, принципы HTTP, авторизацию и работу с API.</p>
                         </div>
                     </article>
                 </div>
@@ -113,9 +119,9 @@
                         <h2 class="main-item__title">
                             <a href="https://www.instagram.com/sapsan_code.kz/" target="_blank">Sapsan Code</a>
                         </h2>
-                        <p class="main-item__date">Май, 2024</p>
+                        <p class="main-item__date">Сентябрь 2023 - Май 2024</p>
                         <div class="main-item__description">
-                            <p>Онлайн курс по основам Backend разработки на Spring (Java)</p>
+                            <p>Backend-разработка на Java с нуля: изучаем Spring Boot, разработку REST API, аутентификацию, работу с микросервисами и контейнерами Docker.</p>
                         </div>
                     </article>
                 </div>
@@ -123,15 +129,15 @@
         </div>
         <div class="footer">
             <div>
-                <span>2024 © Омаргалы Битебаев</span>
+                <span>2025 © Омаргалы Битебаев</span>
             </div>
             <div>
                 <nav class="footer__social">
                     <a href="https://www.linkedin.com/in/bitebayev" target="_blank" class="footer__social-item">
-                        <img src="../assets/img/icons/in.svg" alt="LinkedIn">
+                        <img src="../assets/img/icons/linkedin.png" alt="LinkedIn">
                     </a>
                     <a href="https://t.me/hackeevo" target="_blank" class="footer__social-item">
-                        <img src="../assets/img/icons/telegram.svg" alt="Telegram">
+                        <img src="../assets/img/icons/telegram.png" alt="Telegram">
                     </a>
                 </nav>
             </div>
