--- a/index.html
+++ b/index.html
@@ -26,20 +26,26 @@
                     <span class="content__description"></span>
                     <nav class="content__social">
                         <a href="https://www.linkedin.com/in/bitebayev" target="_blank" class="content__social-item">
-                            <img src="assets/img/icons/in.svg" alt="LinkedIn">
+                            <img src="assets/img/icons/linkedin.png" alt="LinkedIn">
                             <span>LinkedIn</span>
                         </a>
                         <a href="https://t.me/hackeevo" target="_blank" class="content__social-item">
-                            <img src="assets/img/icons/telegram.svg" alt="Telegram">
+                            <img src="assets/img/icons/telegram.png" alt="Telegram">
                             <span>@hAckeeVo</span>
+                        </a>
+                        <a href="https://github.com/OMaRgaLy" target="_blank" class="content__social-item">
+                            <img src="assets/img/icons/github-logo.png" alt="Telegram">
+                            <span>GitHub</span>
                         </a>
                     </nav>
                 </div>
             </div>
+            <a href=""><img src="https://readme-typing-svg.herokuapp.com?font=Fira+Code&weight=500&duration=3500&pause=1&multiline=true&width=500&height=80&separator=%3C&lines=Computer+Science+Enthusiast+;)%3CPHP+and+Go+Backend+Developer!" alt="Typing SVG" /></a>
             <div class="content__main">
                 <div class="content__main-item">
                     <div class="main-item__description">
-                        <p> Hello! I'm Omar, future Software Engineer. Curious about backend development, programming languages, databases, engineering culture and computer science. Feel free to add me to your contacts in <a href="https://www.linkedin.com/in/bitebayev" target="_blank">LinkedIn</a> and/or type a message in <a href="https://t.me/hackeevo" target="_blank">
+                        <p> Hello! My name is Omar, future Senior Software Engineer. I'm a Backend developer who knows how to take a task and see it through to completion. I enjoy exploring new technologies. In work, I value growth, teamwork, high-quality solutions, and social impact.
+                            Discussing code, proposing ideas, helping others, and learning from more experienced developers is an essential part of my work. Feel free to add me to your contacts in <a href="https://www.linkedin.com/in/bitebayev" target="_blank">LinkedIn</a> and/or type a message in <a href="https://t.me/hackeevo" target="_blank">
                             Telegram</a></p>
 
                     </div>
@@ -48,18 +54,18 @@
                 <h1 class="content__about-header">Icons</h1>
                 <h1 class="content__about-header">Blocks</h1>
                 <h2 class="content__subheader">Text</h2>
-                -->
-                <div class="content__main-item">
-                    <div class="main-item__description">
-                        <p>I'll create a block with my pet projects for portfolio soon...</p>
-                    </div>
-                </div>
-                <!--
+
                 <div class="content__main-item">
                     <div class="main-item__description">
                         <p></p>
                     </div>
                 </div>
+
+                <div class="content__main-item">
+                    <div class="main-item__description">
+                        <p></p>
+                    </div>
+                </div>-->
                 <h2 class="content__subheader">Projects</h2>
                 <div class="content__main-item project">
                     <a data-fslightbox href="assets/img/project.png">
@@ -67,17 +73,18 @@
                     </a>
                     <div>
                         <div class="main-item__title">
-                            <a href="/example/project.html"><span>Project 1</span></a>
+                            <a href="https://github.com/OMaRgaLy/hackeevo-project"><span>Task Manager API</span></a>
                         </div>
                         <div class="main-item__description">
-                            <p></p>
+                            <p>Task Manager is a backend service built with PHP and MySQL for managing tasks and users via API. Runs in Docker containers (nginx, php-fpm, mysql). Implements transaction handling (commit/rollback) for safe user and user's task deletion. Tested with Postman, deployed via Git.</p>
+
                         </div>
                         <div class="main-item__subdescription">
-                            <p><span>Stack:</span> Vue.js, Laravel, Socket.io</p>
-                            <p class="main-item__links"><a href=""><span>Source Code</span></a><span>|</span><a href=""><span>Preview</span></a> </p>
+                            <p><span>Stack:</span> Docker: nginx, PHP-FPM, MySQL</p>
+                            <p class="main-item__links"><a href="https://github.com/OMaRgaLy/hackeevo-project"><span>Source Code</span></a><span>|</span><a href="http://195.80.238.99/"><span>Preview</span></a> </p>
                         </div>
                     </div>
-                </div>
+                </div><!--
                 <div class="content__main-item project">
                     <a data-fslightbox href="assets/img/project2.png">
                         <img src="assets/img/project2.png" alt="project2">
@@ -102,9 +109,9 @@
                         <h2 class="main-item__title">
                             <a href="https://upgrade.kolesa.group/" target="_blank">Kolesa Upgrade</a>
                         </h2>
-                        <p class="main-item__date">November, 2022</p>
+                        <p class="main-item__date">September - November, 2022</p>
                         <div class="main-item__description">
-                            <p>Online course about Fundamentals of Backend Development with PHP and Go</p>
+                            <p>Backend development essentials: from PHP 8+ and Go basics to full-fledged web services. Covers Slim, MySQL, Docker, HTTP principles, authentication, and API development.</p>
                         </div>
                     </article>
                 </div>
@@ -113,9 +120,9 @@
                         <h2 class="main-item__title">
                             <a href="https://www.instagram.com/sapsan_code.kz/" target="_blank">Sapsan Code</a>
                         </h2>
-                        <p class="main-item__date">May, 2024</p>
+                        <p class="main-item__date">September 2023 - May 2024</p>
                         <div class="main-item__description">
-                            <p>Online course about Fundamentals of Backend Development with Spring (Java)</p>
+                            <p>Java Backend development from scratch: Covers Spring Boot, REST API creation, authentication, microservices, and Docker containerization.</p>
                         </div>
                     </article>
                 </div>
@@ -123,15 +130,18 @@
         </div>
         <div class="footer">
             <div>
-                <span>2024 © Omargaly Bitebayev</span>
+                <span>2025 © Omargaly Bitebayev</span>
             </div>
             <div>
                 <nav class="footer__social">
                     <a href="https://www.linkedin.com/in/bitebayev" target="_blank" class="footer__social-item">
-                        <img src="assets/img/icons/in.svg" alt="LinkedIn">
+                        <img src="assets/img/icons/linkedin.png" alt="LinkedIn">
                     </a>
                     <a href="https://t.me/hackeevo" target="_blank" class="footer__social-item">
-                        <img src="assets/img/icons/telegram.svg" alt="Telegram">
+                        <img src="assets/img/icons/telegram.png" alt="Telegram">
+                    </a>
+                    <a href="https://github.com/OMaRgaLy" target="_blank" class="footer__social-item">
+                        <img src="assets/img/icons/github-logo.png" alt="Telegram">
                     </a>
                 </nav>
             </div>
