--- a/ru/index.html
+++ b/ru/index.html
@@ -18,7 +18,7 @@
         </div>
         <div class="content">
             <div class="content__hello">
-                <img class="content__hello-img" src="../assets/img/avatar.jpg" alt="Avatar">
+                <img class="content__hello-img" src="../assets/img/avatar_new.jpg" alt="Avatar">
                 <div class="content__hello-text">
                     <span class="content__name">
                         Омаргалы Битебаев <br/>Backend разработчик
