fixed description and misstakes

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                             <a href="https://github.com/OMaRgaLy/hackeevo-project"><span>Task Manager API</span></a>
                         </div>
                         <div class="main-item__description">
-                            <p>Task Manager is a backend service built with PHP and MySQL for managing tasks and users via API. Runs in Docker containers (nginx, php-fpm, mysql). Implements transaction handling (commit/rollback) for safe user and user's task deletion. Tested with Postman, deployed via Git.</p>
+                            <p>Task Manager is a backend service built with PHP and MySQL for managing tasks and users via API. Runs in Docker containers (nginx, php-fpm, mysql). Implements transaction handling (commit/rollback) for safe user and user's tasks deletion. Tested with Postman, deployed via Git.</p>
 
                         </div>
                         <div class="main-item__subdescription">
@@ -111,7 +111,7 @@
                         </h2>
                         <p class="main-item__date">September - November, 2022</p>
                         <div class="main-item__description">
-                            <p>Backend development essentials: from PHP 8+ and Go basics to full-fledged web services. Covers Slim, MySQL, Docker, HTTP principles, authentication, and API development.</p>
+                            <p>Backend development essentials: from PHP 8+ and Go basics to full-fledged web services. Covers Slim, MySQL, Docker, HTTP principles, and API development.</p>
                         </div>
                     </article>
                 </div>
@@ -122,7 +122,7 @@
                         </h2>
                         <p class="main-item__date">September 2023 - May 2024</p>
                         <div class="main-item__description">
-                            <p>Java Backend development from scratch: Covers Spring Boot, REST API creation, authentication, microservices, and Docker containerization.</p>
+                            <p>Java Backend development from scratch: Covers Spring Boot, REST API creation, authentication and Docker containerization.</p>
                         </div>
                     </article>
                 </div>
